fix: for readability

--- a/src/pages/projects/reactstorm/components/Link/index.module.css
+++ b/src/pages/projects/reactstorm/components/Link/index.module.css
@@ -12,6 +12,7 @@
   font-family: "VT323", monospace;
   font-weight: bold;
   font-size: 14px;
+  letter-spacing: 1.5px;
 
   background: linear-gradient(
     180deg,
